Add export db functionality, only exports to console currently, needs an export/restore db tab.

--- a/standalone.html
+++ b/standalone.html
@@ -190,8 +190,8 @@ SBVR2SQL._fLstt = function(v) {v = this._cLst(v); var r = []; for(var i=0;i<v.le
 		<script src="cm/plsql.js"></script>
 		
 		<link rel="stylesheet" href="cm/lib/codemirror.css">
-    	<link rel="stylesheet" href="cm/sbvr.css">
-    	<link rel="stylesheet" href="cm/plsql.css">
+    <link rel="stylesheet" href="cm/sbvr.css">
+    <link rel="stylesheet" href="cm/plsql.css">
 		
 		<link type="text/css" href="css/ui-lightness/jquery-ui.css" rel="stylesheet" />
 		<link type="text/css" href="css/style.css" rel="stylesheet" />
@@ -464,6 +464,7 @@ SBVR2SQL._fLstt = function(v) {v = this._cLst(v); var r = []; for(var i=0;i<v.le
 				        <input type="button" id='bum'  value="Update Model"  onClick="return false"                >
 				        <input type="button" id='br'   value="Reset"         onClick="resetClient();return false"  >
 						<input type="button" id='bbdb' value="Backup DB"     onClick="backupDB();return false"     >
+						<input type="button" id='bbdb' value="Export DB"     onClick="exportDB();return false"     >
 						<input type="button" id='brdb' value="Restore DB"    onClick="restoreDB();return false"    >
 					</div>
 				</form>
