Add a clear database function.

--- a/standalone.html
+++ b/standalone.html
@@ -328,8 +328,9 @@ Copyright 2011 University of Surrey
 				        <input type="button" id='bum'  value="Update Model"  onClick="return false"                >
 				        <input type="button" id='br'   value="Reset"         onClick="resetClient();return false"  >
 						<input type="button" id='bbdb' value="Backup DB"     onClick="backupDB();return false"     >
-						<input type="button" id='bbdb' value="Export DB"     onClick="exportDB();return false"     >
 						<input type="button" id='brdb' value="Restore DB"    onClick="restoreDB();return false"    >
+						<input type="button" id='bedb' value="Export DB"    onClick="exportDB();return false"    >
+						<input type="button" id='bcdb' value="Clear DB"    onClick="clearDB();return false"    >
 					</div>
 				</form>
 			</div>
