--- a/standalone.html
+++ b/standalone.html
@@ -336,6 +336,7 @@ Copyright 2011 University of Surrey
 						<input type="button" id='blm1' value="Load Model 1"  onClick="loadmod(model1);return false">
 						<input type="button" id='blm2' value="Load Model 2"  onClick="loadmod(model2);return false">
 						<input type="button" id='blm3' value="Load Model 3"  onClick="loadmod(model3);return false">
+						<input type="button" id='blmt' value="Load Test"     onClick="loadmod(modelTest);return false">
 						<input type="button" id='bem'  value="Execute Model" onClick="transformClient(editor.getValue());return false">
 						<input type="button" id='bum'  value="Update Model"  onClick="return false">
 						<input type="button" id='br'   value="Reset"         onClick="resetClient();return false">
