removed debugging cruft from last commit

--- a/standalone.html
+++ b/standalone.html
@@ -150,8 +150,7 @@ Copyright 2011 University of Surrey
 					$('#bem').removeAttr('disabled');
 					$('#bum').attr('disabled','disabled');
 					$('#br').attr('disabled','disabled');
-					localStorage._client_onAir=false
-					alert(localStorage._client_onAir);
+					localStorage._client_onAir=false;
 				});
 			}
 
