--- a/standalone.html
+++ b/standalone.html
@@ -342,7 +342,6 @@ Copyright 2011 University of Surrey
 						<input type="button" id='br'   value="Reset"         onClick="resetClient();return false">
 						<!--input type="button" id='bbdb' value="Backup DB"     onClick="backupDB();return false">
 						<input type="button" id='brdb' value="Restore DB"    onClick="restoreDB();return false"-->
-						<input type="button" id='bedb' value="Export DB"     onClick="exportDB(importExportEditor);$('#tabs').tabs('select',6);return false">
 						<input type="button" id='bcdb' value="Clear DB"      onClick="clearDB();return false">
 					</div>
 				</form>
@@ -364,6 +363,7 @@ Copyright 2011 University of Surrey
 			<div id="importExportTab">
 				<textarea id="importExportArea" rows="15" cols="136"></textarea>
 				<input type="button" id='bidb' value="Import DB" onClick="importDB(importExportEditor.getValue());return false">
+						<input type="button" id='bedb' value="Export DB"     onClick="exportDB(importExportEditor);return false">
 			</div>
 		</div>
 		
