Create an SBVRParser.reset method to reset the parser and switch to using that rather than copy/pasting reset code.

--- a/standalone.html
+++ b/standalone.html
@@ -214,11 +214,7 @@ Copyright 2011 University of Surrey
 				//request schema from server and store locally.
 				serverRequest("GET", "/model/", [], '', function(headers, result){
 					//Reset SBVR parser
-					SBVRParser.terms = {};
-					SBVRParser.verbs = {};
-					SBVRParser.fctps = {};
-					SBVRParser.ruleVars = {};
-					SBVRParser.ruleVarsCount = 0;
+					SBVRParser.reset();
 					
 					ctree = SBVRParser.matchAll(result, 'expr');
 					ctree = SBVR_PreProc.match(ctree, "optimizeTree");
