--- a/standalone.html
+++ b/standalone.html
@@ -18,13 +18,13 @@ Copyright 2011 University of Surrey
 
 <html>
 	<head>
-		<script src="ometa/lib.js"></script>
-		<script src="ometa/ometa-base.js"></script>
-		<script src="ometa/parser.js"></script>
-		<script src="ometa/bs-js-compiler.js"></script>
-		<script src="ometa/bs-ometa-compiler.js"></script>
-		<script src="ometa/bs-ometa-optimizer.js"></script>
-		<script src="ometa/bs-ometa-js-compiler.js"></script>
+		<script src="ometa-js/lib.js"></script>
+		<script src="ometa-js/ometa-base.js"></script>
+		<script src="ometa-js/parser.js"></script>
+		<script src="ometa-js/bs-js-compiler.js"></script>
+		<script src="ometa-js/bs-ometa-compiler.js"></script>
+		<script src="ometa-js/bs-ometa-optimizer.js"></script>
+		<script src="ometa-js/bs-ometa-js-compiler.js"></script>
 		
 		<script src="js/mylibs/json2.js"></script>
 	
@@ -32,7 +32,7 @@ Copyright 2011 University of Surrey
 		<script src='ometa-code/SBVR_PreProc.js'></script>
 		<!--script type="text/x-ometa-js">
 		</script>
-		<script src="ometa/ometa-script-tag-now.js"></script-->
+		<script src="ometa-js/ometa-script-tag-now.js"></script-->
 		<script src='ometa-code/SBVR2SQL.js'></script>
 		<script src='ometa-code/ClientURIParser.js'></script>
 		<script src='ometa-code/ClientURIUnparser.js'></script>
