Use CodeMirror2 from a submodule and update links.  Also use new OMeta based highlighter and disable autocompletion until it is done via OMeta.

--- a/ometa-dev/ometa-dev.html
+++ b/ometa-dev/ometa-dev.html
@@ -25,14 +25,14 @@ Copyright 2011 University of Surrey
 		<script src="../ometa-js/bs-ometa-js-compiler.js"></script>
 		
 		<script src="js/beautify.js"></script>
-		<script src="../cm/lib/codemirror.js"></script> 
-		<script src="../cm/mode/javascript.js"></script> 
+		<script src="../CodeMirror2/lib/codemirror.js"></script> 
+		<script src="../CodeMirror2/mode/javascript.js"></script> 
 		<script src="../js/libs/jquery-1.6.js"></script>
 		<script src="../js/mylibs/jquery-ui-1.8.11.js"></script>
 		
 		<link type="text/css" href="../css/ui-lightness/jquery-ui.css" rel="stylesheet" />
-		<link rel="stylesheet" href="../cm/lib/codemirror.css">
-		<link rel="stylesheet" href="../cm/theme/default.css">
+		<link rel="stylesheet" href="../CodeMirror2/lib/codemirror.css">
+		<link rel="stylesheet" href="../CodeMirror2/theme/default.css">
 		
 		<script>
 			function translateCode(s) {
