Move ometa-js into HTML5Boilerplate js dir.

--- a/standalone.html
+++ b/standalone.html
@@ -18,13 +18,8 @@ Copyright 2011 University of Surrey
 
 <html>
 	<head>
-		<script src="ometa-js/lib.js"></script>
-		<script src="ometa-js/ometa-base.js"></script>
-		<script src="ometa-js/parser.js"></script>
-		<script src="ometa-js/bs-js-compiler.js"></script>
-		<script src="ometa-js/bs-ometa-compiler.js"></script>
-		<script src="ometa-js/bs-ometa-optimizer.js"></script>
-		<script src="ometa-js/bs-ometa-js-compiler.js"></script>
+		<script src="js/mylibs/ometa-js/lib.js"></script>
+		<script src="js/mylibs/ometa-js/ometa-base.js"></script>
 		
 		<script src="js/mylibs/json2.js"></script>
 	
