Use minified versions of JQuery libraries.

--- a/ometa-dev/ometa-dev.html
+++ b/ometa-dev/ometa-dev.html
@@ -27,8 +27,8 @@ Copyright 2011 University of Surrey
 		<script src="js/beautify.js"></script>
 		<script src="../CodeMirror2/lib/codemirror.js"></script>
 		<script src="../CodeMirror2/mode/javascript/javascript.js"></script> 
-		<script src="../js/libs/jquery-1.6.js"></script>
-		<script src="../js/mylibs/jquery-ui-1.8.11.js"></script>
+		<script src="../js/libs/jquery-1.6.2.min.js"></script>
+		<script src="../js/mylibs/jquery-ui-1.8.11.custom.min.js"></script>
 		
 		<link type="text/css" href="../css/ui-lightness/jquery-ui.css" rel="stylesheet" />
 		<link rel="stylesheet" href="../CodeMirror2/lib/codemirror.css">
