--- a/standalone.html
+++ b/standalone.html
@@ -41,8 +41,8 @@ Copyright 2011 University of Surrey
 		<script src="runTrans.js"></script>
 		<script src="backupRestore.js"></script>
 		
-		<script src="js/libs/jquery-1.6.2.js"></script>
-		<script src="js/mylibs/jquery-ui-1.8.11.js"></script>
+		<script src="js/libs/jquery-1.6.2.min.js"></script>
+		<script src="js/mylibs/jquery-ui-1.8.11.custom.min.js"></script>
 		<script src="js/mylibs/jquery-custom-file-input.js"></script>
 		
 		<script src="CodeMirror2/lib/codemirror.js"></script>
