Integrate the SBVR CodeMirror2 mode/autocompletion with the boilerplate.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Copyright 2011 University of Surrey
 
 	<link rel="stylesheet" href="CodeMirror2/lib/codemirror.css">
 	<link rel="stylesheet" href="CodeMirror2/theme/default.css">
-	<link rel="stylesheet" href="cm/sbvr.css">
+	<link rel="stylesheet" href="css/cm/sbvr.css">
 		
 	<link type="text/css" href="css/ui-lightness/jquery-ui.css" rel="stylesheet" />
 
@@ -144,6 +144,13 @@ Copyright 2011 University of Surrey
 	<script defer src="js/libs/jquery-1.6.2.min.js"></script>
 	<script defer src="js/mylibs/jquery-ui-1.8.11.custom.min.js"></script>
 	<script defer src="js/mylibs/jquery-custom-file-input.js"></script>
+	<script defer src="js/mylibs/inflection.js"></script>
+	
+	<script defer src="CodeMirror2/lib/codemirror.js"></script>
+	<script defer src="CodeMirror2/mode/plsql/plsql.js"></script>
+	
+	<script defer src="js/mylibs/cm/sbvr.js"></script>
+	<script defer src="js/mylibs/cm/sbvrac.js"></script>
 	<!-- end scripts-->
 	
 	<script defer src='ometa-code/SBVRParser.js'></script>
@@ -160,13 +167,6 @@ Copyright 2011 University of Surrey
 	<script defer src="drawDataUI.js"></script>
 	<script defer src="runTrans.js"></script>
 	<script defer src="backupRestore.js"></script>
-	
-	<script defer src="CodeMirror2/lib/codemirror.js"></script>
-	<script defer src="CodeMirror2/mode/plsql/plsql.js"></script>
-	<script defer src="cm/sbvr.js"></script>
-
-	<script defer src="cm/inflection.js"></script>
-	<script defer src="cm/sbvrac.js"></script>
 	
 	<script defer type='text/javascript'>
 		var sqlEditor, sbvrEditor, importExportEditor;
