Finish the ometa-js, it didn't all get committed in the last commit.

--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@ Copyright 2011 University of Surrey
 	<!-- scripts concatenated and minified via ant build script-->
 	<script defer src="js/plugins.js"></script>
 	<script defer src="js/script.js"></script>
-	<script defer src="js/mylibs/ometa-js/lib.js"></script>
-	<script defer src="js/mylibs/ometa-js/ometa-base.js"></script>
+	<script defer src="ometa-js/lib.js"></script>
+	<script defer src="ometa-js/ometa-base.js"></script>
 		
 	<script defer src="js/mylibs/json2.js"></script>
 		
