Integrate our JS files.

--- a/index.html
+++ b/index.html
@@ -161,12 +161,12 @@ Copyright 2011 University of Surrey
 	<script defer src='js/mylibs/ometa-code/Prettify.js'></script>
 		
 	<script defer src='js/mylibs/ometa-code/SBVRModels.js'></script>
-	<!-- end scripts-->
 		
-	<script defer src="server.js"></script>
-	<script defer src="drawDataUI.js"></script>
-	<script defer src="runTrans.js"></script>
-	<script defer src="backupRestore.js"></script>
+	<script defer src="js/mylibs/server.js"></script>
+	<script defer src="js/mylibs/drawDataUI.js"></script>
+	<script defer src="js/mylibs/runTrans.js"></script>
+	<script defer src="js/mylibs/backupRestore.js"></script>
+	<!-- end scripts-->
 	
 	<script defer type='text/javascript'>
 		var sqlEditor, sbvrEditor, importExportEditor;
